# office-manager

./: CMakeLists.txt  CompanyList.txt  PersonList.txt  README.md  TaxList.txt
Company/: Company.cpp  Company.h
Currency/: Currency.cpp  Currency.h
Invoice/: Invoice.cpp  Invoice.h
Office/: Office.cpp  Office.h
Person/: Person.cpp  Person.h
Tax/: Tax.cpp  Tax.h
TaxFunctions/: TaxFunctions.cpp  TaxFunctions.h
TaxesApp/: TaxesApp.cpp
UnitTests/CompanyUnitTest/: CompanyUnitTest.cpp
UnitTests/CurrencyUnitTest/: CurrencyUnitTest.cpp
UnitTests/InvoiceUnitTest/: InvoiceUnitTest.cpp
UnitTests/OfficeUnitTest/: OfficeUnitTest.cpp
UnitTests/PersonUnitTest/: PersonUnitTest.cpp
UnitTests/TaxFunctionUnitTest/: TaxFunctionUnitTest.cpp
UnitTests/TaxUnitTest/: TaxUnitTest.cpp
